--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "@vueuse/core": "^10.7.0"
+    "@vueuse/core": "^10.7.0",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.1.0"
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.1.0",
+    "vite": "^5.0.0"
   }
-} 
+}
